# esp32-photoframe

./: .clang-format  .gitignore  API.md  CMakeLists.txt  Makefile  README.md  build.py  generate_manifests.py  sdkconfig.defaults  sdkconfig.defaults.seeedstudio_reterminal_e1002  sdkconfig.defaults.waveshare  sdkconfig.defaults.xiao_ee02
components/board_hal/: CMakeLists.txt  Kconfig
components/board_hal/include/: board_hal.h  board_seeedstudio_reterminal_e1002.h  board_seeedstudio_xiao_ee02.h  board_waveshare_photopainter_73.h
components/board_hal/src/: driver_seeedstudio_reterminal_e1002.c  driver_seeedstudio_xiao_ee02.c  driver_seeedstudio_xiao_ee04.c  driver_waveshare_photopainter.c  driver_waveshare_photopainter_73.c  driver_xiao_ee02.c
components/epaper_port/: CMakeLists.txt  Kconfig  epaper_port.c
components/epaper_port/include/: epaper_port.h
components/epaper_port/src/: driver_seeedstudio_t133a01.c  driver_waveshare_7in3.c  driver_xiao_ee02.c
docs/: API.md  DEV.md  MEASURED_PALETTE.md  demo.js  index.html  launch_demo.py
main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  ai_manager.c  ai_manager.h  album_manager.c  color_palette.c  color_palette.h  config.h  config_manager.c  config_manager.h  display_manager.c  display_manager.h  dns_server.c  dns_server.h  ha_integration.c  ha_integration.h  http_server.c  http_server.h  idf_component.yml  image_processor.c  image_processor.h  main.c  mdns_service.c  mdns_service.h  ota_manager.c  periodic_tasks.c  periodic_tasks.h  png_decoder.c  png_decoder.h  power_manager.c  power_manager.h  storage.c  (+9 more)
(+97 files in other folders)
